// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render component 1`] = `
<DocumentFragment>
  <div
    class="grid"
  >
    <div
      class="item colSpan colSpan-6 space-before-0 space-after-0"
    />
    <div
      class="item colSpan colSpan-12 space-before-0 space-after-0"
    >
      <table
        class="roleAssignments"
      >
        <tbody />
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render component in disabled state 1`] = `
<DocumentFragment>
  <div
    class="grid"
  >
    <div
      class="item colSpan colSpan-6 space-before-0 space-after-0"
    />
    <div
      class="item colSpan colSpan-12 space-before-0 space-after-0"
    >
      <table
        class="roleAssignments"
      >
        <tbody />
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render component without data 1`] = `
<DocumentFragment>
  <div
    class="grid"
  >
    <div
      class="item colSpan colSpan-6 space-before-0 space-after-0"
    />
  </div>
</DocumentFragment>
`;
